# 3des-rs

./: Cargo.toml  README.md  build.rs
src/: 3des.c  3des.h  lib.rs
